--- a/Challenge/CSS/recreate2.css
+++ b/Challenge/CSS/recreate2.css
@@ -66,6 +66,10 @@ nav{
     width:15%;
     height: 100%;
 }
+.content{
+    width: 85%;
+    height: 100%;
+}
 .nav-list{
     display: flex;
     flex-direction: column;
