--- a/Challenge/CSS/recreate2.css
+++ b/Challenge/CSS/recreate2.css
@@ -1,21 +1,15 @@
 body{
     box-sizing: border-box;
-    background-color:#d2e2df;
-    color: #000;
-}
-.All{
     background-color: #f4f5f7;
-    width: 95%;
-    padding: 5px;
-    margin: auto;
-    margin-top: 50px;
-    min-height:550px;
-    box-sizing: border-box;
+    color: #000;
+    padding: 10px;
 }
+
 .Header{
     display: inline-flex;
     color: hsl(0, 0%, 0%);
     padding: 5px;
+    width: 100%;
 }
 .Header button{
     background: white;
@@ -25,9 +19,7 @@ body{
     padding: 10px;
 }
 .Head-btn{
-    float: right;
-    position: relative;
-    right: -730px;
+ margin-left: auto;
 }
 .Header a{
     text-decoration: none;
@@ -59,17 +51,15 @@ section{
     margin-top: 10px;
 }
 nav{
-    display: inline-block;
+    display: flex;
     list-style: none;
     padding: 0;
     margin: 0;
     width:15%;
-    height: 100%;
+    height: 80vh;
+    flex-direction: column;
 }
-.content{
-    width: 85%;
-    height: 100%;
-}
+
 .nav-list{
     display: flex;
     flex-direction: column;
@@ -104,7 +94,7 @@ nav li{
 }
 .profile{
     
-    margin-top: 170px;
+    margin-top: auto;
     margin-left: 20px;
     text-align: center;
 }
@@ -116,17 +106,27 @@ nav li{
 .profile p{
     font-weight: 300;
     font-size: 12px;
-    margin-top: -13px;
+    margin-top: -5px;
 }
+.profile h6{
+    margin-top: 5px;
+    font-weight: 500;
+    font-size: 14px;
+}
+.content{
+    width: 85%;
+}
+
 .top a{
     text-decoration:none;
     color: #000;
     padding-top: 2px;
     padding-bottom: 2px;
+    border-bottom: 2px solid transparent;
 }
 .top a:hover{
     color: #000;
-    border-bottom: solid 2px #000;
+    border-color: #000;
 }
 .top ul{
     display: inline-flex;
@@ -135,3 +135,79 @@ nav li{
     text-align: center;
 
 }
+.firstCards{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin-top: 10px;
+}
+.firstCard1{
+    background-color: #d2e2df;
+    width: 300px; 
+    height: 80px;
+    color: #000;
+    padding: 10px; 
+    border-radius: 5px;
+    margin-right: 10px;
+}
+.firstCard1 h5{
+    font-weight: 500;
+    font-size: 12px;
+}
+.firstCard1 h3{
+    margin-top: 15px;
+}
+.firstCard2{
+    background-color: #d6f23a;
+    width: 300px; 
+    height: 80px;
+    color: #000;
+    padding: 10px; 
+    border-radius: 5px;
+    margin-right: 10px;
+}
+.firstCard2 h5{
+    font-weight: 500;
+    font-size: 12px;
+}
+.firstCard2 h3{
+    margin-top: 15px;
+}
+.firstCard3{
+    background-color: #B9Afee;
+    width: 300px; 
+    height: 80px;
+    color: #000;
+    padding: 10px; 
+    border-radius: 5px;
+    margin-right: 10px;  
+}
+.firstCard3 h5{
+    font-weight: 500;
+    font-size: 12px;
+}
+.firstCard3 h3{
+    margin-top: 15px;
+}
+
+  
+  .dropdown-menu {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    background-color: white;
+    border: 1px solid #ccc;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    display: none;
+    z-index: 100;
+    min-width: 100px;
+  }
+  
+  .dropdown-menu div {
+    padding: 8px 12px;
+    cursor: pointer;
+  }
+  
+  .dropdown-menu div:hover {
+    background-color: #f0f0f0;
+  }
