--- a/Challenge/CSS/recreate2.css
+++ b/Challenge/CSS/recreate2.css
@@ -31,13 +31,14 @@ body{
     background-color: black;
     width:150px;
     height:40px;
+    margin-right: 20px;
 }
 #upgrade a{
     color:#fff
 }
 .Header h3{
     font-weight: 500;
-    margin-left: 60px;
+    margin-left: 6%;
 }
 .Header h4{
     position: relative;
@@ -56,7 +57,7 @@ nav{
     padding: 0;
     margin: 0;
     width:15%;
-    height: 80vh;
+    height: 90vh;
     flex-direction: column;
 }
 
@@ -95,7 +96,6 @@ nav li{
 .profile{
     
     margin-top: auto;
-    margin-left: 20px;
     text-align: center;
 }
 .profile img{
@@ -131,7 +131,7 @@ nav li{
 .top ul{
     display: inline-flex;
     list-style: none;
-    margin-left: -25px;
+    margin-left: -30px;
     text-align: center;
 
 }
@@ -143,7 +143,7 @@ nav li{
 }
 .firstCard1{
     background-color: #d2e2df;
-    width: 300px; 
+    width: 362px; 
     height: 80px;
     color: #000;
     padding: 10px; 
@@ -151,7 +151,7 @@ nav li{
     margin-right: 10px;
 }
 .firstCard1 h5{
-    font-weight: 500;
+    font-weight: 300;
     font-size: 12px;
 }
 .firstCard1 h3{
@@ -159,7 +159,7 @@ nav li{
 }
 .firstCard2{
     background-color: #d6f23a;
-    width: 300px; 
+    width: 362px; 
     height: 80px;
     color: #000;
     padding: 10px; 
@@ -167,7 +167,7 @@ nav li{
     margin-right: 10px;
 }
 .firstCard2 h5{
-    font-weight: 500;
+    font-weight: 300;
     font-size: 12px;
 }
 .firstCard2 h3{
@@ -175,19 +175,33 @@ nav li{
 }
 .firstCard3{
     background-color: #B9Afee;
-    width: 300px; 
+    width: 362px; 
     height: 80px;
     color: #000;
     padding: 10px; 
     border-radius: 5px;
     margin-right: 10px;  
+    display: flex;
 }
 .firstCard3 h5{
-    font-weight: 500;
+    font-weight: 300;
     font-size: 12px;
 }
 .firstCard3 h3{
     margin-top: 15px;
+}
+.cardthreebtn{
+    margin-left: auto;
+    
+}
+#btn1{
+    background-color: #fff;
+    border: none;
+    color: #000;
+    font-size: 12px;
+    padding: 5px;
+    border-radius: 200px;
+    cursor: pointer;
 }
 
   
@@ -211,3 +225,118 @@ nav li{
   .dropdown-menu div:hover {
     background-color: #f0f0f0;
   }
+.firstCharts{
+    display:flex;
+    gap: 10px;
+    width: 100%;
+    margin-top: 10px;
+}       
+.firstChart1 {
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 20px;
+    width: 50%;
+    height: 300px;
+}
+.firstChart2{
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 20px;
+    width: 48%;
+    height: 300px;
+}
+.firstChart2 p{
+    font-size: 13px;
+    font-weight: 400;
+}
+.proGress{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin-top: 50px;
+}
+.fifty{
+    flex-basis: 50%;
+    border-left: 2px solid gray;
+    height: 50px;
+    padding-left: 5px;
+    font-weight: 500;
+}
+.thrity{
+    flex-basis: 30%;
+    border-left: 2px solid gray;
+    height: 50px;
+    padding-left: 5px;
+    font-weight: 500;
+}
+.twenty{
+    flex-basis: 20%;
+    border-left: 2px solid gray;
+    height: 50px;
+    padding-left: 5px;
+    font-weight: 500;
+}
+.progress-bar{
+    width:100%;
+    height: 15px;
+    padding: 2px;
+    background-color: rgba(95, 94, 95, 0.122);
+    border-radius: 4px;
+    margin-top: 5px;
+    display:   flex;
+    flex-direction: row;
+}
+.fiveZero{
+    flex-basis: 49%;
+    background-color: purple;
+    opacity: 0.5;
+    height: 80%;
+    border-radius: 4px;
+
+}
+.threeZero{
+    flex-basis: 29%;
+    background-color: blue;
+    opacity: 0.5;
+    height: 80%;
+    border-radius: 4px;
+    margin-left: 1px;
+    margin-right: 1px;
+}
+.twoZero{
+    flex-basis: 19%;
+
+    background-color: black;
+    height: 80%;
+    border-radius: 4px;
+}
+.secondCharts{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin-top: 10px;
+}
+#btn2{
+    background-color: #d5ef47;
+    border: none;
+    color: #000;
+    font-size: 12px;
+    padding: 5px;
+    border-radius: 200px;
+    cursor: pointer;
+    font-weight: 500;
+}
+.secondChart1{
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 20px;
+    width: 50%;
+    height: 300px;
+}
+.secondChart2{
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 20px;
+    width: 48%;
+    height: 300px;
+}
