--- a/Challenge/CSS/recreate2.css
+++ b/Challenge/CSS/recreate2.css
@@ -280,6 +280,7 @@ nav li{
     width:100%;
     height: 15px;
     padding: 2px;
+    padding-top: 4px;
     background-color: rgba(95, 94, 95, 0.122);
     border-radius: 4px;
     margin-top: 5px;
