--- a/Challenge/CSS/signup2.css
+++ b/Challenge/CSS/signup2.css
@@ -36,14 +36,14 @@ section{
 #form input{
     width: 80%;
     padding: 10px;
-    margin-bottom: 20px;
-    border-radius: 5px;
+    margin-bottom: 10px;
+    border-radius: 3%;
     border:2px solid #ccc;
     padding: 10px;
       padding-left: 30px;
 }
 #form button{
-    width: 80%;
+    width: 81.5%;
     padding: 10px;
     background-color: pink;
     color: black;
@@ -81,4 +81,8 @@ section{
     position: relative;
     left: 30px;
     margin-bottom: 5px;
+}
+.eye-icon{
+    position: relative;
+    right: 35px;
 }
