--- a/Challenge/CSS/flusync.css
+++ b/Challenge/CSS/flusync.css
@@ -2,13 +2,14 @@ body{
     box-sizing: border-box;
     background-color: #f4f5f7;
     color: #000;
-    padding: 10px;
+    /* padding: 10px; */
 }
 
 .Header{
     display: inline-flex;
     color: hsl(0, 0%, 0%);
     padding: 5px;
+    padding-left: 12px;
     width: 100%;
 }
 .Header button{
@@ -78,6 +79,9 @@ nav li{
     color: #acacb2;
     text-align: left;
     cursor: pointer;
+}
+#navHome{
+    border-left: 5px solid #000;
 }
 .nav-list a{
     text-decoration: none;
@@ -309,6 +313,8 @@ nav li{
     flex-direction: row;
     width: 100%;
     margin-top: 10px;
+    gap: 10px;
+    margin-bottom: 100px;
 }
 #btn2{
     background-color: #d5ef47;
@@ -333,6 +339,101 @@ nav li{
     padding: 20px;
     width: 48%;
     height: 300px;
+}
+footer{
+    height: 300px;
+    background: #CEC9C9;
+}
+.top-box{
+    background: #000;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    height: 35%;
+    position: relative;
+    bottom: 20%;
+    box-shadow: -10px 10px 4px rgb(0,0,0,0.6);
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+    border-radius: 5px;
+}
+.top-box-content{
+    text-align: left;
+    color:#fff;
+    padding-left: 20px;
+    padding-top: 10px;
+}
+.top-box-btn a{
+    color: #000;
+
+}
+.top-box-btn button{
+    background: #fff;
+    width: 150px;
+    height: 38px;
+    margin-top: 22.5%;
+    margin-bottom: auto;
+    margin-left: 50%;
+    border: 0;
+    border-radius: 5px;
+    transition: all 0.2s;
+}
+.top-box-btn button:hover{
+    background-color: #FAC9C9;
+    height: 43px;
+}
+.bottom-box{
+    display: flex;
+    flex-direction: row;
+    width: 70%;
+    margin-left: 15%;
+}
+.bottom-box-company{
+   padding-left: 8%;
+}
+.bottom-box-company ul{
+    list-style: none;
+}
+.bottom-box-company a{
+    text-decoration: none;
+    color: #000;
+} 
+.bottom-box-company a:hover{
+    font-style: italic;
+    cursor: pointer;
+}
+.bottom-box-company li{
+    margin-bottom: 5px;
+}
+.bottom-box-info{
+    padding-left: 10%;
+}
+.bottom-box-info ul{
+    list-style: none;
+}
+.bottom-box-info li{
+    margin-bottom: 5px;
+}
+.bottom-box-info a{
+    text-decoration: none;
+    color: #000;
+}
+.bottom-box-info a:hover{
+    font-style: italic;
+    cursor: pointer;
+}
+.bottom-box-links{
+    padding-left: 10%;
+}
+.bottom-box-links h4{
+    padding-left: 2.5px;
+}
+.bottom-box-links i{
+    padding-top: 20px;
+    font-size: 25px;
+    padding-right: 5px;
+    cursor: pointer;
 }
 @media (max-width: 430px){
     
