--- a/Challenge/CSS/flusync.css
+++ b/Challenge/CSS/flusync.css
@@ -83,6 +83,9 @@ nav li{
 #navHome{
     border-left: 5px solid #000;
 }
+#navHome a{
+    color: #000;
+}
 .nav-list a{
     text-decoration: none;
     color: gray;
@@ -429,11 +432,12 @@ footer{
 .bottom-box-links h4{
     padding-left: 2.5px;
 }
-.bottom-box-links i{
+.bottom-box-links a{
     padding-top: 20px;
     font-size: 25px;
     padding-right: 5px;
     cursor: pointer;
+    color: #000;
 }
 @media (max-width: 430px){
     
