--- a/Challenge/CSS/flusync.css
+++ b/Challenge/CSS/flusync.css
@@ -3,6 +3,7 @@ body{
     background-color: #f4f5f7;
     color: #000;
     /* padding: 10px; */
+    font-family:"Poppins", sans-serif;
 }
 
 .Header{
@@ -377,7 +378,7 @@ footer{
     height: 38px;
     margin-top: 22.5%;
     margin-bottom: auto;
-    margin-left: 50%;
+    margin-left: 30%;
     border: 0;
     border-radius: 5px;
     transition: all 0.2s;
@@ -389,7 +390,7 @@ footer{
 .bottom-box{
     display: flex;
     flex-direction: row;
-    width: 70%;
+    width: 72%;
     margin-left: 15%;
 }
 .bottom-box-company{
@@ -435,7 +436,7 @@ footer{
 .bottom-box-links a{
     padding-top: 20px;
     font-size: 25px;
-    padding-right: 5px;
+    padding-right: 3px;
     cursor: pointer;
     color: #000;
 }
