--- a/Challenge/CSS/flusync-teams.css
+++ b/Challenge/CSS/flusync-teams.css
@@ -308,18 +308,94 @@ nav li{
 }
 .add-team a{
     text-decoration: none;
-    color: #fff;
+
     margin-left: 90%;
     position: relative;
     bottom: 34px;
     cursor: pointer;
     font-size: 20px;
 }
-.add-team a:hover{
+.add-team button:hover{
     color: #000;
 }
-.team-member{
+.add-team button{
+    background: none;
+    border: none;
+    color: #fff;
+}
+.create-team{
+    display: none;
+    position: fixed;
+    z-index: 100;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+}
+.create-team-content{
+    background: white;
+    padding: 20px;
+    margin: 10% auto;
+    width: 600px;
+    height: 420px;
+    position: relative;
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+}
+.create-team-content h4{
+    margin-left: -70%;
+}
+.select-icon{
+    display: flex;
+    padding-left: 12.3%;
     margin-top: 50px;
+}
+#teamName{
+    width: 250px;
+    margin-right: 9%;
+}
+#teamIcon{
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 7%;
+    width: 200px;
+    padding: 10px;
+    border: 1px solid #000;
+    padding-left: 4%;
+}
+#teamIcon button{
+    background: none;
+    border: 1px solid #000;
+    border-radius: 50%;
+    padding: 5px;
+    width: 50px;
+    height: 50px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+}
+#teamIcon button:hover{
+    color: rgba(0,0,0,0.2);
+}
+#closeBtn {
+  position: absolute;
+  right: 30px;
+  top: 10px;
+  cursor: pointer;
+  font-size: 20px;
+}
+#submitTeam{
+    margin-top: 30px;
+    margin-left: 5%;
+    width: 250px;
+    height: 33px;
+    background-color: #FAC9C9;
+    border: none;
+    border-radius: 4px;
+}
+.team-member{
+    margin-top: 150px;
+    margin-bottom: 100px;
 }
 .team-member-head{
     width: 100%;
@@ -529,4 +605,10 @@ footer{
 }   
 .bottom-box-links a:hover{
     color: #000;
+}
+.active-btn{
+    background-color: #FAC9C9;
+}
+.disabled-btn{
+    opacity: 0.5;
 }
