--- a/Challenge/CSS/flusync-teams.css
+++ b/Challenge/CSS/flusync-teams.css
@@ -35,7 +35,7 @@
 }
 .Header h3{
     font-weight: 500;
-    margin-left: 6%;
+    margin-left: 2.8%;
 }
 .Header h4{
     position: relative;
@@ -157,7 +157,7 @@ nav li{
     flex-wrap: wrap;
 }
 .Frontend-team{
-    width: 361px;
+    width: 32%;
     height: 71px;
     color: #000;
     padding: 15px;
@@ -194,7 +194,7 @@ nav li{
     margin-left: -10px;
 }
 .Backend-team{
-    width: 361px;
+    width: 32%;
     height: 71px;
     color: #000;
     padding: 15px;
@@ -219,7 +219,7 @@ nav li{
     color: #000
 }
 .Marketing-team{
-    width: 361px;
+    width: 32%;
     height: 71px;
     color: #000;
     padding: 15px;
@@ -243,7 +243,7 @@ nav li{
     color: #000;
 }
 .Financial-team{
-    width: 361px;
+    width: 32%;
     height: 71px;
     color: #000;
     padding: 15px;
@@ -268,7 +268,7 @@ nav li{
     color: #000;
 }
 .Research-team{
-    width: 361px;
+    width: 32%;
     height: 71px;
     color: #000;
     padding: 15px;
@@ -292,8 +292,34 @@ nav li{
 .Research-team a:hover{
     color: #000;
 }
+.team{
+    width: 32%;
+    height: 71px;
+    color: #000;
+    padding: 15px;
+    background-color: #D6F23A;
+    text-align: left;
+    margin-right:10px;
+    margin-top: 15px;
+}
+.team h4{
+    margin-top: -10px;
+    font-weight: 400;
+}
+.team a{
+    text-decoration: none;
+    color: #000;
+    margin-left: 90%;
+    position: relative;
+    bottom: 16px;
+    cursor: pointer;
+}
+.team a:hover{
+    color: #000;
+}
+
 .add-team{
-    width: 361px;
+    width: 32%;
     height: 71px;
     color: #fff;
     padding: 15px;
@@ -449,8 +475,8 @@ nav li{
     overflow-x: scroll;
 }
 .team-member-card{
-    width: 212px;
-    height: 347px;
+    width: 19%;
+    height: 100%;
     background-color: rgba(0,0,0,0.1);
     padding: 10px;
     text-align: center;
@@ -493,18 +519,14 @@ nav li{
     color: #89E3D2 !important;
 }
 .team-member-card button{
-    width:100px;
+    width:60%;
     color: #fff;
     background-color: #000;
     border: none;
     padding: 5px;
 }
-#cardOne{
-    margin-left: 2.5%;
-}
-#cardSix{
-    margin-left: 2.5%;
-}
+
+
 footer{
     height: 300px;
     background: #CEC9C9;
@@ -540,7 +562,7 @@ footer{
     height: 38px;
     margin-top: 22.5%;
     margin-bottom: auto;
-    margin-left: 30%;
+    /* margin-left: 30%; */
     border: 0;
     border-radius: 5px;
     transition: all 0.2s;
@@ -552,7 +574,7 @@ footer{
 .bottom-box{
     display: flex;
     flex-direction: row;
-    width: 72%;
+    width: 75%;
     margin-left: 15%;
 }
 .bottom-box-company{
@@ -591,7 +613,7 @@ footer{
     cursor: pointer;
 }
 .bottom-box-links{
-    padding-left: 10%;
+    padding-left: 4%;
 }
 .bottom-box-links h4{
     padding-left: 2.5px;
