--- a/Challenge/CSS/flusync.css
+++ b/Challenge/CSS/flusync.css
@@ -378,7 +378,7 @@ footer{
     height: 38px;
     margin-top: 22.5%;
     margin-bottom: auto;
-    margin-left: 30%;
+    /* margin-left: 2%; */
     border: 0;
     border-radius: 5px;
     transition: all 0.2s;
@@ -390,7 +390,7 @@ footer{
 .bottom-box{
     display: flex;
     flex-direction: row;
-    width: 72%;
+    width: 75%;
     margin-left: 15%;
 }
 .bottom-box-company{
