--- a/Challenge/CSS/flusync.css
+++ b/Challenge/CSS/flusync.css
@@ -11,6 +11,7 @@ body{
     color: hsl(0, 0%, 0%);
     padding: 5px;
     padding-left: 12px;
+    margin-top: 10px;
     width: 100%;
 }
 .Header button{
@@ -40,7 +41,7 @@ body{
 }
 .Header h3{
     font-weight: 500;
-    margin-left: 6%;
+    margin-left: 1%;
 }
 .Header h4{
     position: relative;
