--- a/Challenge/CSS/flusync-teams.css
+++ b/Challenge/CSS/flusync-teams.css
@@ -7,6 +7,7 @@
     padding: 5px;
     padding-left: 12px;
     width: 100%;
+    margin-top: 10px;
 }
 .Header button{
     background: white;
@@ -49,6 +50,8 @@ section{
 
 }
 nav{
+    position: sticky;
+    top: 0;
     display: flex;
     list-style: none;
     padding: 0;
@@ -56,7 +59,7 @@ nav{
     width:15%;
     height: 90vh;
     flex-direction: column;
-
+    z-index: 100;
 }
 
 .nav-list{
