--- a/Challenge/CSS/flusync.css
+++ b/Challenge/CSS/flusync.css
@@ -55,6 +55,8 @@ section{
     margin-top: 10px;
 }
 nav{
+    position: sticky;
+    top: 0;
     display: flex;
     list-style: none;
     padding: 0;
@@ -62,8 +64,11 @@ nav{
     width:15%;
     height: 90vh;
     flex-direction: column;
+    z-index: 100;
 }
-
+/* .nav-icon{
+    padding-right: 5px;
+} */
 .nav-list{
     display: flex;
     flex-direction: column;
@@ -463,6 +468,10 @@ footer{
     .nav-list button{
         padding: 6px;
     }
+    .nav-text{   
+        display: none;
+    }
+    
     .nav-list a{
         font-size: 12px;
     }
@@ -472,7 +481,7 @@ footer{
     }
     
     .profile p{
-        font-size: 9px;
+        font-size: 7px;
     }
     .profile h6{
         font-size: 10px;
