--- a/Challenge/CSS/flusync-analytics.css
+++ b/Challenge/CSS/flusync-analytics.css
@@ -1,6 +1,6 @@
 body{
     box-sizing: border-box;
-    background-color: #f4f5f7 !important;
+    background-color:  #f4f5f7 !important;
     color: #000;
     /* padding: 10px; */
     font-family:"Poppins", sans-serif;
@@ -13,7 +13,7 @@ body{
     padding-left: 12px;
     margin-top: 10px;
     width: 100%;
-    background-color: #f4f5f7 ;
+    background-color:  #f4f5f7;
 }
 .Header button{
     background: white;
@@ -54,7 +54,7 @@ section{
     display: flex;
     justify-content: space-between;
     margin-top: 10px;
-    background-color: #f4f5f7 ;
+    background-color:  #f4f5f7;
 }
 nav{
     position: sticky;
@@ -133,121 +133,6 @@ nav li{
 }
 .content{
     width: 85%;
-}
-.content-header{
-    text-align: center;
-    margin-bottom: 50px;
-}
-.content-header h2{
-    font-weight: 700;
-}
-.content-body{
-    margin-bottom: 250px;
-}
-.content-head{
-    display: flex;
-    flex-direction: row;
-    background:white;
-    height: 50px;
-    padding: 10px 20px;
-    border-radius: 5px;
-}
-.content-head input{
-    height: 30px;
-    border-radius: 5px;
-    border: 0;
-    padding: 5px;
-    border: 1px solid gray;
-    
-}
-#filterGoals{
-    color: #fff;
-    background: #000;
-    border: none;
-    border-radius: 5px;
-    margin-left: auto;
-    font-size: 15px;
-    padding: 5px;
-}
-#addGoal{
-    color: #fff;
-    background: #000;
-    border: none;
-    border-radius: 5px;
-    margin-left: 1%;
-    font-size: 15px;
-    padding: 5px;
-}
-.content-goals{
-    margin-top: 50px;
-    margin-bottom: 200px;
-}
-.content-goal-one{
-    display: flex;
-    flex-direction: row;
-    box-sizing: border-box;
-    border: 1px solid #000;
-    padding: 10px;
-    border-radius: 5px;
-    margin-bottom: 10px;
-}
-.content-goal-one i{
-    margin-bottom: auto;
-    margin-top: auto;
-}
-.content-goal-one h5{
-    margin-left: 10%;
-    margin-bottom: auto;
-    margin-top: auto;
-}
-.content-goal-one p{
-    margin-top: auto;
-    margin-bottom: auto;
-    
-}
-.goal-bar{
-    margin-left: 10%;
-    margin-top: auto;
-    margin-bottom: auto;
-    width: 20%;
-    height: 5px;
-    border-radius: 5px;
-    border: 1px solid black;
-}
-.bar-one{
-    width: 80%;
-    height: 100%;
-    background-color: #000;
-}
-.bar-two{
-    width: 50%;
-    height: 100%;
-    background-color: #000;
-}
-.bar-three{
-     width: 20%;
-    height: 100%;
-    background-color: #000;
-}
-#deleteBtn{
-    margin-left: auto;
-    color: #fff;
-    background: #000;
-    border: none;
-    border-radius: 5px;
-    margin-left: auto;
-    font-size: 15px;
-    padding: 5px;
-}
-#editBtn{
-     margin-left: auto;
-    color: #fff;
-    background: #000;
-    border: none;
-    border-radius: 5px;
-    margin-left: 1%;
-    font-size: 15px;
-    padding: 5px;
 }
 
 footer{
@@ -345,4 +230,27 @@ footer{
     padding-right: 3px;
     cursor: pointer;
     color: #000;
+}
+.Projects {
+    margin-top: 50px;
+    text-align: center;
+}
+.Projects h2{
+    margin-bottom: 50px;
+}
+.total-projects{
+    width: 100%;
+}
+.firstChart1{
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 20px;
+    width: 50%;
+    height: 300px;
+    display: flex;
+    flex-direction: row;
+}
+canvas{
+    max-width: 300px;
+    max-height: 300px;
 }
