--- a/CSS/flusync-analytics.css
+++ b/CSS/flusync-analytics.css
@@ -63,7 +63,7 @@ nav{
     list-style: none;
     padding: 0;
     margin: 0;
-    width:15%;
+    width:12%;
     height: 90vh;
     flex-direction: column;
     z-index: 100;
@@ -234,32 +234,181 @@ footer{
 .Projects {
     margin-top: 50px;
     text-align: center;
+    margin-bottom: 200px;
 }
 .Projects h2{
     margin-bottom: 50px;
 }
-.total-projects{
+.total-charts{
     width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 50px;
 }
 .firstChartone{
-    background-color: #fff;
+    background-color: #7c7c7c44;
     border-radius: 5px;
     padding: 20px;
-    width: 50%;
+    width: 48%;
     height: 300px;
     display: flex;
     flex-direction: row;
 }
 canvas{
-    max-width: 300px;
-    max-height: 300px;
+    max-width: 250px;
+    max-height: 250px;
 }
 .firstChart-content{
     width: 50%;
+    text-align: right !important;
 
 }
-.trend{
+.firstChart-content h5{
+    opacity: 0.5;
+}
+.firstChart-content h1{
+    margin-top: 50px;
+}
+.trendone{
     color: red;
-    font-size: 5px;
-    
+    font-size: 10px;
+    margin-left: -10px;
+    font-weight: 500;
+}
+#perIncOne{
+    color: red;
+    font-size: 10px;
+    font-weight: 500;
+    margin-left: 5px;
+}
+.firstChart-slider-one{
+    margin-left: auto;
+    display: flex;
+    gap: 10px;
+    justify-content: flex-end;
+    margin-top: 25%;
+    border: 1px solid #000;
+    border-radius: 50px;
+    width: 100%;
+    height: 10%;
+}   
+.firstChart-slider-one button{
+   background: none;
+   border: 0;
+   height: 100%;
+    margin-left: auto;
+    padding: 0 10px  ;
+    width: 50px;
+    font-size: 12px;
+}
+.active{
+    background: #fff !important;
+    color: blueviolet;
+    border-radius: 500px;
+
+}
+.firstCharttwo{
+    background-color: #7c7c7c44;
+    border-radius: 5px;
+    padding: 20px;
+    width: 48%;
+    height: 300px;
+    display: flex;
+    flex-direction: row;
+}
+canvas{
+    max-width: 250px;
+    max-height: 250px;
+}
+.firstChart-content{
+    width: 50%;
+    text-align: right !important;
+
+}
+.firstChart-content h5{
+    opacity: 0.5;
+}
+.firstChart-content h1{
+    margin-top: 50px;
+}
+.trendtwo{
+    color: green;
+    font-size: 10px;
+    margin-left: -10px;
+    font-weight: 500;
+}
+#perIncTwo{
+    color: green;
+    font-size: 10px;
+    font-weight: 500;
+    margin-left: 5px;
+}
+.firstChart-slider-two{
+    margin-left: auto;
+    display: flex;
+    gap: 10px;
+    justify-content: flex-end;
+    margin-top: 25%;
+    border: 1px solid #000;
+    border-radius: 50px;
+    width: 100%;
+    height: 10%;
+}   
+.firstChart-slider-two button{
+   background: none;
+   border: 0;
+   height: 100%;
+    margin-left: auto;
+    padding: 0 10px  ;
+    width: 50px;
+    font-size: 12px;
+}
+.active{
+    background: #fff !important;
+    color: blueviolet;
+    border-radius: 500px;
+
+}
+.customer-table{
+    width: 98%;
+    margin-top: 50px;
+    border-collapse: collapse;
+    border: 2px solid #000;
+}
+.customer-table-head{
+    display: flex;
+    margin: auto;
+    flex-direction: row;
+    width: 100%;
+    border-bottom: 2px solid #000;
+}
+.customer-table-head h3{
+    margin-left: 5px;
+    width: 20%;
+}
+#addCustomer{
+    background: #000;
+    border: 0;
+    padding: 5px;
+    font-size: 12px;
+    color: #fff;
+    cursor: pointer;
+    margin-left: 60%;
+    margin-right: 5px;
+    margin-top: auto;
+    margin-bottom: auto;
+    border-radius: 5px;
+}
+#editCustomer{
+    background: #000;
+    border: 0;
+    padding: 5px;
+    font-size: 12px;
+    color: #fff;
+    cursor: pointer;
+    margin-right: 10px;
+    margin-top: auto;
+    margin-bottom: auto;
+        border-radius: 5px;
 }
